...
        android:textSize="24sp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="32dp" />

    <!-- Clear Database Button -->
    <Button
        android:id="@+id/clear_database_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/settings_title"
        android:layout_alignParentStart="true"
        android:layout_marginTop="32dp"
        android:background="@drawable/button_background"
        android:text="@string/clear_database" />

    <!-- Vibration Switch -->
    <Switch
        android:id="@+id/vibration_switch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:layout_below="@id/clear_database_button"
        android:layout_alignParentStart="true"
        android:layout_marginTop="40dp"
...
        android:layout_alignParentStart="true"
        android:layout_marginTop="40dp"
        android:textColor="@android:color/white" />

    <!-- Rounds Spinner -->
    <Spinner
        android:id="@+id/rounds_spinner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/vibration_switch"
        android:layout_toEndOf="@id/rounds_text"
        android:layout_marginStart="16dp"
        android:layout_marginTop="43dp"
...
